client/blocks/reader-post-card/style.scss
.reader-post-options-menu__ellipsis-menu {
	margin-left: 16px;

	.ellipsis-menu__toggle {
		padding: 0;
		height: 24px;
	}
}

.reader-post-options-menu__popover .popover__menu .popover__menu-item {
	display: flex;

	&.follow-button:hover,
	&.follow-button:focus {
		.follow-button__label {
			color: var(--color-text-inverted);
		}
		.reader-following-feed,
		.reader-follow-feed {
			.following-icon-background,
			path {
				fill: var(--color-text-inverted);
			}
			.following-icon-tick {
				stroke: var(--color-text-inverted);
			}
		}
	}
}

.reader-post-card.card {
	border-bottom: 5px solid var(--color-neutral-0);
	border-radius: 6px; /* stylelint-disable-line scales/radii */
	box-shadow: none;
	margin: 0;
	margin-bottom: 24px;
	position: relative;
	background: #FAFAFA; /* stylelint-disable color-hex-case */

	@include breakpoint-deprecated( ">660px" ) {
		border-bottom: 1px solid #e9e9ea;
	}

	&.is-selected {
		&::before {
			content: "";
			position: absolute;
			top: 0;
			bottom: 0;
			left: -8px;
			width: 2px;
			background: var(--color-primary);

			@include breakpoint-deprecated( ">660px" ) {
				left: -16px;
			}
		}
	}

	&.is-seen {
		opacity: 0.5;
	}

	&.has-thumbnail {
		.reader-featured-image {
			box-sizing: border-box;
		}

		&.is-photo {
			.reader-post-card__post {
				flex-direction: column;
			}

			.reader-post-card__post-details,
			.reader-post-card__social {
				padding-left: 0;
			}

			.reader-post-card__post-details {
				flex: 0 auto; // IE11 Photo card actions hidden
				margin: 0;
				padding-top: 8px;
			}

			.reader-post-card__title {
				color: var(--color-text-inverted);
				font-family: $sans;
				position: relative;
				bottom: 30px;
				left: 20px;
				text-shadow: 0 1px rgba(0, 0, 0, 0.3);
				width: calc(100% - 44px);
				text-overflow: ellipsis;
				overflow: hidden;
				z-index: z-index("root", ".reader-post-card__title");
				margin-bottom: -15px; // relative elements need a negative margin so they don't create bottom padding
				height: 19px;
				white-space: nowrap;
			}

			.reader-post-card__title .reader-post-card__title-link {
				color: var(--color-text-inverted);
				display: inline;
				font-size: $font-body-extra-small;
				line-height: 20px;
			}

			.reader-post-actions {
				margin: 0;
			}

			.reader-post-actions .reader-post-actions__visit {
				margin-left: -3px;
			}
		}
	}

	&.has-thumbnail,
	&.is-gallery {
		.reader-post-card__post-details {
			flex: 1;
		}
	}

	&.is-gallery .reader-post-card__post {
		flex-direction: column;

		.dot-pager__controls {
			margin-bottom: 0;
			margin-top: 16px;
		}
		.dot-pager {
			display: flex;
			flex-direction: column-reverse;
		}
	}

	&.is-gallery,
	&.is-photo {
		.reader-post-card__post {
			margin-top: 8px;
		}
	}

	.reader-post-actions {
		margin: 16px 0 0;
	}

	&.is-compact {
		.reader-post-card__post {
			display: inherit;
			margin: 0;
		}

		.reader-post-card__post-heading {
			display: flex;
			justify-content: space-between;
		}

		.reader-post-card__post-content {
			flex-direction: row;
			gap: 24px;
			margin-bottom: 8px;

			@include breakpoint-deprecated( "<660px" ) {
				flex-direction: column-reverse;
			}

			&.reader-post-card__no-excerpt {
				flex-direction: column;
				gap: 0;

				.reader-post-card__post-details {
					min-height: auto;
					padding-bottom: 6px;
				}
			}

			&:not(.reader-post-card__no-excerpt) {
				.reader-featured-image {
					width: 200px !important;

					@include breakpoint-deprecated( "<660px" ) {
						width: auto !important;
						height: 300px !important;
					}

					@include breakpoint-deprecated( "<480px" ) {
						height: 200px !important;
					}
				}
			}
		}

		.reader-post-card__post-details {
			margin: 0;
			min-height: 100px;
		}

		.reader-post-card__title-link {
			display: -webkit-box;
			-webkit-line-clamp: 2;
			-webkit-box-orient: vertical;
			overflow: hidden;
			overflow-wrap: anywhere;
			max-width: 344px;
		}

		.reader-post-card__post-media {
			flex-direction: row;
			text-align: right;
		}

		.reader-excerpt {
			max-height: none;
			-webkit-line-clamp: 3;
		}
	}

	&:not(.is-compact) {
		.reader-post-card__post-details .reader-post-card__title {
			margin-top: 24px;
		}
		.reader-excerpt__content {
			margin: 7px 0 0;
		}
		.reader-featured-image {
			margin-top: 24px;
		}
		.reader-post-card__featured-images,
		.reader-featured-video {
			margin-top: 24px;
			.reader-featured-image {
				margin-top: 0;
			}
		}
		div[role="presentation"] {
			margin-top: 24px;
			padding-bottom: 24px;
			border-bottom: 1px solid var(--color-neutral-5);
		}
		.reader-post-actions {
			margin-top: 24px;
		}
		.comments__comment-list.is-inline {
			margin: 24px 0 0 10px;
			.comments__form {
				margin-top: 0;
			}
		}
	}

	&.is-compact.has-thumbnail {
		.ellipsis-menu__toggle {
			padding-bottom: 36px;
		}
	}

	.reader-excerpt {
		display: -webkit-box;
		max-height: 45px;
		overflow: hidden;
		-webkit-line-clamp: 2;
		-webkit-box-orient: vertical;
		margin-bottom: 10px;
	}

	.reader-excerpt[direction="rtl"] {
		&::before {
			top: inherit;
		}
	}

	.reader-excerpt[direction="ltr"] {
		&::before {
			top: inherit;
		}
	}

	// When comment list is attached to reader post card, remove top border and margin to feel more
	// cohesive.
	.comments__comment-list {
		border-top: none;
		margin: 20px 0 0 10px;
		padding-top: 0;
	}
}

.reader-post-card__conversation-post {
	.comments__comment-actions {
		display: flex;
		justify-content: flex-start;
		padding-top: 8px;
	}
}
/* ... */

